out.txt
/Users/yu9824/miniforge3/envs/pybtex39/lib/python3.9/site-packages/setuptools/dist.py:484: UserWarning: Normalizing '0.19.0-beta.0' to '0.19.0b0'
  warnings.warn(tmpl.format(**locals()))
............................................................................E....F.....................
======================================================================
ERROR: test_repr (pybtex.tests.database_test.DatabaseIOTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/yu9824/projects/pybtex/pybtex/tests/database_test/__init__.py", line 82, in test_repr
    data = eval(
  File "<string>", line 1
    BibliographyData(entries=OrderedCaseInsensitiveDict([('ruckenstein-diffusion', Entry('article', fields=OrderedCaseInsensitiveDict([('language', 'english'), ('title', 'Predicting the Diffusion Coefficient in Supercritical Fluids'), ('journal', 'Ind. Eng. Chem. Res.'), ('volume', '36'), ('year', '1997'), ('pages', '888-895')]), persons=OrderedCaseInsensitiveDict([('author', [Person(Liu, Hongquin), Person(Ruckenstein, Eli)])]))), ('test-booklet', Entry('booklet', fields=OrderedCaseInsensitiveDict([('language', 'english'), ('title', 'Just a booklet'), ('year', '2006'), ('month', 'January'), ('address', 'Moscow'), ('howpublished', 'Published by Foo')]), persons=OrderedCaseInsensitiveDict([('author', [Person(de Last, Jr., First Middle)])]))), ('test-inbook', Entry('inbook', fields=OrderedCaseInsensitiveDict([('publisher', 'Some Publisher'), ('language', 'english'), ('title', 'Some Title'), ('series', 'Some series'), ('booktitle', 'Some Good Book'), ('number', '3'), ('edition', 'Second'), ('year', '1933'), ('pages', '44--59')]), persons=OrderedCaseInsensitiveDict([('author', [Person(Jackson, Peter)])]))), ('viktorov-metodoj', Entry('book', fields=OrderedCaseInsensitiveDict([('publisher', 'Л.: <<Химия>>'), ('year', '1977'), ('language', 'russian'), ('title', 'Методы вычисления физико-химических величин и прикладные расчёты')]), persons=OrderedCaseInsensitiveDict([('author', [Person(Викторов, Михаил Маркович)])])))]), preamble=['%%% pybtex example file'])
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ^
SyntaxError: invalid syntax

======================================================================
FAIL: pybtex.tests.general_engine_test.test_bibtex_engine(<module 'pybtex.bibtex' from '/Users/yu9824/projects/pybtex/pybtex/bibtex/__init__.py'>, ('cyrillic.bib', 'alpha.bst'))
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/yu9824/miniforge3/envs/pybtex39/lib/python3.9/site-packages/nose/case.py", line 197, in runTest
    self.test(*self.arg)
  File "/Users/yu9824/projects/pybtex/pybtex/tests/general_engine_test.py", line 75, in check_make_bibliography
    assert result == correct_result, diff(correct_result, result)
AssertionError: --- 

+++ 

@@ -1,5 +1,5 @@

 %%% pybtex example file
-\begin{thebibliography}{Вик77}
+\begin{thebibliography}{Jac33}
 
 \bibitem[dL06]{test-booklet}
 First~Middle de~Last, Jr.

----------------------------------------------------------------------
Ran 103 tests in 0.542s

FAILED (errors=1, failures=1)
